@@ -165,22 +165,10 @@ public class PeakListTools {
             throw new IllegalArgumentException("Number of maximum tolerances not equal to number of peak dimensions");
         }
 
-        class Match {
 
-            int i = 0;
-            int j = 0;
-            double delta = 0.0;
-
-            Match(int i, int j, double delta) {
-                this.i = i;
-                this.j = j;
-                this.delta = delta;
-            }
-
-            double getDelta() {
-                return delta;
-            }
+        record Match(int i, int j, double delta) {
         }
+
 
         double biggestMax = 0.0;
 
@@ -193,7 +181,7 @@ public class PeakListTools {
             }
         }
 
-        final ArrayList matches = new ArrayList();
+        final List<Match> matches = new ArrayList<>();
         for (int i = 0, n = peakList.size(); i < n; i++) {
             Peak iPeak = peakList.getPeak(i);
 
@@ -250,13 +238,11 @@ public class PeakListTools {
             }
         }
 
-        matches.sort(comparing(Match::getDelta));
+        matches.sort(comparing(Match::delta));
 
         boolean[] iUsed = new boolean[peakList.size()];
 
-        for (int i = 0, n = matches.size(); i < n; i++) {
-            Match match = (Match) matches.get(i);
-
+        for (Match match : matches) {
             if (!iUsed[match.i] && !iUsed[match.j]) {
                 iUsed[match.i] = true;
                 iUsed[match.j] = true;
@@ -318,7 +304,7 @@ public class PeakListTools {
      */
     public static DistanceMatch[][] getNeighborDistances(PeakList peakList, double[] minTol,
                                                          double[] maxTol) {
-        final ArrayList matches = new ArrayList();
+        final List<DistanceMatch> matches = new ArrayList<>();
         int nDim = peakList.getNDim();
 
         double[] deltas = new double[nDim];
@@ -378,13 +364,15 @@ public class PeakListTools {
                 dMatches[i] = new DistanceMatch[matches.size()];
 
                 for (int k = 0; k < matches.size(); k++) {
-                    dMatches[i][k] = (DistanceMatch) matches.get(k);
+                    dMatches[i][k] = matches.get(k);
                 }
             }
         }
 
         return dMatches;
     }
+
+    record Match(int i, int j, double score) {}
 
     /**
      * @param peakListA
@@ -411,20 +399,7 @@ public class PeakListTools {
         DistanceMatch[][] bNeighbors = getNeighborDistances(peakListB, minTol,
                 maxTol);
 
-        class Match {
-
-            int i = 0;
-            int j = 0;
-            double delta = 0.0;
-
-            Match(int i, int j, double delta) {
-                this.i = i;
-                this.j = j;
-                this.delta = delta;
-            }
-        }
-
-        final ArrayList matches = new ArrayList();
+        final List<Match> matches = new ArrayList<>();
 
         for (int i = 0; i < aNeighbors.length; i++) {
             if (aNeighbors[i] != null) {
@@ -451,15 +426,12 @@ public class PeakListTools {
             }
         }
 
-        matches.sort(comparing(DistanceMatch::getDelta));
+        matches.sort(comparing(Match::score));
 
-        int m = (aNeighbors.length > bNeighbors.length) ? aNeighbors.length
-                : bNeighbors.length;
+        int m = Math.max(aNeighbors.length, bNeighbors.length);
         boolean[] iUsed = new boolean[m];
 
-        for (int i = 0, n = matches.size(); i < n; i++) {
-            Match match = (Match) matches.get(i);
-
+        for (Match match : matches) {
             if (!iUsed[match.i] && !iUsed[match.j]) {
                 iUsed[match.i] = true;
                 iUsed[match.j] = true;
@@ -482,6 +454,7 @@ public class PeakListTools {
     public static MatchResult matchPeakLists(PeakList peakListA, PeakList peakListB, int[] dims, double[] tol) {
         return matchPeakLists(peakListA, peakListB, dims, dims, tol);
     }
+
     public static MatchResult matchPeakLists(PeakList peakListA, PeakList peakListB, int[] dimsA, int[] dimsB, double[] tol) {
         List<MatchItem> peakItemsA = getMatchingItems(peakListA, dimsA);
         List<MatchItem> peakItemsB = getMatchingItems(peakListB, dimsB);
@@ -493,8 +466,7 @@ public class PeakListTools {
         }
         double[] iOffsets = new double[dimsA.length];
         double[] jOffsets = new double[dimsA.length];
-        MatchResult result = doBPMatch(peakListA, peakItemsA, iOffsets, peakItemsB, jOffsets, tol);
-        return result;
+        return doBPMatch(peakListA, peakItemsA, iOffsets, peakItemsB, jOffsets, tol);
     }
 
     /**
@@ -568,8 +540,7 @@ public class PeakListTools {
         List<double[]> positions = new ArrayList<>();
         List<String[]> names = new ArrayList<>();
         for (var cR : mol.getCompoundsAndResidues()) {
-            if (cR instanceof Residue) {
-                Residue res = (Residue) cR;
+            if (cR instanceof Residue res) {
                 int i = 0;
                 boolean ok = true;
                 for (var name : aNames) {
@@ -640,7 +611,7 @@ public class PeakListTools {
                 List<PeakDim> linkedPeakDims = peakList.getLinkedPeakDims(peak, dims[iDim]);
                 double ppmCenter = 0.0;
                 for (PeakDim peakDim : linkedPeakDims) {
-                    Peak peak2 = (Peak) peakDim.getPeak();
+                    Peak peak2 = peakDim.getPeak();
                     usedPeaks.add(peak2);
                     ppmCenter += peakDim.getChemShiftValue();
                 }
@@ -662,7 +633,9 @@ public class PeakListTools {
     }
 
 
-    public record  MatchResult(List<MatchItem> matchItemsA, List<MatchItem> matchItemsB,  int[] matching,  int nMatches,  double score) {}
+    public record MatchResult(List<MatchItem> matchItemsA, List<MatchItem> matchItemsB, int[] matching, int nMatches,
+                              double score) {
+    }
 
 
     private static MatchResult doBPMatch(PeakList peakList, List<MatchItem> iMList, final double[] iOffsets, List<MatchItem> jMList, final double[] jOffsets, double[] tol) {
@@ -720,14 +693,13 @@ public class PeakListTools {
             }
 
         }
-        MatchResult matchResult = new MatchResult(iMList, jMList, matching, nMatches, score);
-        return matchResult;
+        return new MatchResult(iMList, jMList, matching, nMatches, score);
     }
 
     private static void optimizeMatch(PeakList peakList, final ArrayList<MatchItem> iMList, final double[] iOffsets, final ArrayList<MatchItem> jMList, final double[] jOffsets, final double[] tol, int minDim, double min, double max) {
         class MatchFunction implements UnivariateFunction {
 
-            int minDim = 0;
+            final int minDim;
 
             MatchFunction(int minDim) {
                 this.minDim = minDim;
@@ -839,6 +811,7 @@ public class PeakListTools {
             }
         }
     }
+
     public static void clusterPeakLists(List<PeakList> peakLists, int iDim, double limit) {
         List<Peak> peaks = new ArrayList<>();
         for (PeakList peakList : peakLists) {
@@ -960,23 +933,14 @@ public class PeakListTools {
         PeakList peakList = peak.getPeakList();
         int nDim = peakList.getNDim();
         for (Peak targetPeak : peakList.peaks()) {
-            for (int i=0;i<nDim;i++) {
+            for (int i = 0; i < nDim; i++) {
                 targetPeak.getPeakDim(i).setLineWidthValue(peak.getPeakDim(i).getLineWidthValue());
                 targetPeak.getPeakDim(i).setBoundsValue(peak.getPeakDim(i).getBoundsValue());
             }
         }
     }
 
-    final static class CenterRef {
-
-        final int index;
-        final int dim;
-
-        public CenterRef(final int index, final int dim) {
-            this.index = index;
-            this.dim = dim;
-        }
-    }
+    record CenterRef(int index, int dim) {}
 
     public enum GuessType {
         GLOBAL_INTENSITY,
@@ -1030,15 +994,15 @@ public class PeakListTools {
     }
 
     public static void quantifyPeaks(PeakList peakList, Dataset dataset, String mode) {
-            if ((peakList.peaks() == null) || peakList.peaks().isEmpty()) {
-                return;
-            }
-            if (dataset == null) {
-                throw new IllegalArgumentException("No dataset for peak list");
-            }
+        if ((peakList.peaks() == null) || peakList.peaks().isEmpty()) {
+            return;
+        }
+        if (dataset == null) {
+            throw new IllegalArgumentException("No dataset for peak list");
+        }
 
 
-            java.util.function.Function<RegionData, Double> f = getMeasureFunction(mode);
+        java.util.function.Function<RegionData, Double> f = getMeasureFunction(mode);
         if (f == null) {
             throw new IllegalArgumentException("Invalid measurment mode: " + mode);
         }
@@ -1074,13 +1038,13 @@ public class PeakListTools {
         if (f == null) {
             throw new IllegalArgumentException("Invalid measurment mode: " + mode);
         }
-        int nDataDim = datasets.get(0).getNDim();
+        int nDataDim = datasets.getFirst().getNDim();
         int nDim = peakList.getNDim();
         if (nDim == nDataDim) {
             quantifyPeaks(peakList, datasets, f, mode, 1);
         } else if (nDim == (nDataDim - 1)) {
             int scanDim = 2;
-            int nPlanes = datasets.get(0).getSizeTotal(scanDim);
+            int nPlanes = datasets.getFirst().getSizeTotal(scanDim);
             quantifyPeaks(peakList, datasets, f, mode, nPlanes);
         } else if (nDim > nDataDim) {
             throw new IllegalArgumentException("Peak list has more dimensions than dataset");
@@ -1119,7 +1083,7 @@ public class PeakListTools {
             throw new IllegalArgumentException("Unknown measurment type: " + mode);
         }
 
-        peakList.peaks().stream().forEach(peak -> {
+        peakList.peaks().forEach(peak -> {
             double[][] values = new double[2][nPlanes];
             measurePlanes(nPlanes, peak, dataset, f, mode, values, 0);
             setValues(peak, values, mode);
@@ -1236,7 +1200,7 @@ public class PeakListTools {
      */
     public static void tweakPeaks(PeakList peakList, Dataset dataset, Set<Peak> speaks, int[] planes) {
         int[] pdim = peakList.getDimsForDataset(dataset, true);
-        speaks.stream().forEach(peak -> {
+        speaks.forEach(peak -> {
             try {
                 peak.tweak(dataset, pdim, planes);
             } catch (IOException ex) {
@@ -1296,13 +1260,13 @@ public class PeakListTools {
      * @throws PeakFitException
      */
     public static void groupPeaksAndFit(PeakList peakList, Dataset theFile, int[] rows, double[] delays, Collection<Peak> peaks, PeakFitParameters fitPars) {
-        Set<List<Set<Peak>>> oPeaks = null;
+        Set<List<Set<Peak>>> oPeaks;
         if (fitPars.constrainDim() < 0) {
             oPeaks = getPeakLayers(peaks);
         } else {
             oPeaks = getPeakColumns(peakList, peaks, fitPars.constrainDim());
         }
-        oPeaks.stream().forEach(oPeakSet -> {
+        oPeaks.forEach(oPeakSet -> {
                     try {
                         List<Peak> lPeaks = new ArrayList<>();
                         int nFit = 0;
@@ -1325,13 +1289,16 @@ public class PeakListTools {
                 }
         );
     }
-    public record FitZZPeakRatioResult(PeakFitPars peakFitPars, List<Double> xValues, List<Double> yValues) {}
+
+    public record FitZZPeakRatioResult(PeakFitPars peakFitPars, List<Double> xValues, List<Double> yValues) {
+    }
+
     /**
      * Fit peak measures (intensities or volumes) to ZZ function
      *
-     * @param peakList The peakList
-     * @param theFile The dataset to fit the peaks to
-     * @param peakGroups   A collection of groups of four peaks to fit simultaneously
+     * @param peakList   The peakList
+     * @param theFile    The dataset to fit the peaks to
+     * @param peakGroups A collection of groups of four peaks to fit simultaneously
      * @return a List of alternating name/values with the parameters of the fit
      * if updatePeaks is false. Otherwise return empty list
      * @throws IllegalArgumentException
@@ -1344,7 +1311,7 @@ public class PeakListTools {
         if (!ok) {
             throw new IllegalArgumentException("ZZ fit requires groups with 4 peaks ");
         }
-        for (var group:peakGroups) {
+        for (var group : peakGroups) {
             for (Peak peak : group) {
                 if (peak.getMeasures().isEmpty()) {
                     PeakListTools.quantifyPeaks(peakList, "center");
@@ -1353,17 +1320,17 @@ public class PeakListTools {
             }
         }
         List<Double> xValues = new ArrayList<>();
-        List<Double> yValues= new ArrayList<>();
-        List<Double> errValues= new ArrayList<>();
+        List<Double> yValues = new ArrayList<>();
+        List<Double> errValues = new ArrayList<>();
         Peak peak = null;
-        for (var group:peakGroups) {
+        for (var group : peakGroups) {
             List<Peak> abPeaks = PeakLinker.linkFourPeaks(group);
             if (!simFit) {
-                peak = abPeaks.get(0);
+                peak = abPeaks.getFirst();
             }
-            XYEValues xyeValues = getXYErrValues( peakList, abPeaks);
+            XYEValues xyeValues = getXYErrValues(peakList, abPeaks);
             List<XYValue> xyValues = calcRatioKK(xyeValues);
-            for (XYValue xyValue:xyValues) {
+            for (XYValue xyValue : xyValues) {
                 xValues.add(xyValue.getXValue());
                 yValues.add(xyValue.getYValue());
             }
@@ -1375,7 +1342,7 @@ public class PeakListTools {
         double[][] errArray = new double[1][xArray[0].length];
 
         ZZFitRatio zzFitRatio = new ZZFitRatio();
-        zzFitRatio.setXYE(xArray,yArray,errArray);
+        zzFitRatio.setXYE(xArray, yArray, errArray);
         PointValuePair result = zzFitRatio.fit();
         if (result == null) {
             GUIUtils.warn("Fitting", "Error fitting data");
@@ -1386,13 +1353,17 @@ public class PeakListTools {
         String[] parNames = zzFitRatio.parNames();
 
         Map<String, FitPar> fitPars = new HashMap<>();
-        for (int i=0;i<pars.length;i++) {
+        for (int i = 0; i < pars.length; i++) {
             FitPar fitPar = new FitPar(parNames[i], pars[i], errs[i]);
             fitPars.put(fitPar.name(), fitPar);
         }
         PeakFitPars peakFitPars = new PeakFitPars(peak, fitPars);
         FitZZPeakRatioResult fitZZPeakRatioResult = new FitZZPeakRatioResult(peakFitPars, xValues, yValues);
         return fitZZPeakRatioResult;
+    }
+
+    public record ZZFitPars(boolean bindingMode, boolean groupFit, boolean constrainR1, boolean fitInept, boolean fitRatios) {
+
     }
 
     /**
@@ -1406,17 +1377,45 @@ public class PeakListTools {
      * @throws IOException
      * @throws PeakFitException
      */
-    public static List<PeakFitPars> fitZZPeakIntensities(PeakList peakList, Dataset theFile, Collection<Peak> peaks)
+    public static List<PeakFitPars> fitZZPeakIntensities(PeakList peakList, Dataset theFile, Collection<Peak> peaks, ZZFitPars zzFitPars)
             throws IllegalArgumentException, IOException, PeakFitException {
         if (peaks.size() != 4) {
             throw new IllegalArgumentException("ZZ fit requires 4 peaks but " + peaks.size() + " provided");
         }
-        boolean missingMeasures = peaks.stream().anyMatch(peak -> !peak.getMeasures().isPresent());
+        boolean missingMeasures = peaks.stream().anyMatch(peak -> peak.getMeasures().isEmpty());
         if (missingMeasures) {
             PeakListTools.quantifyPeaks(peakList, "center");
         }
         List<Peak> abPeaks = PeakLinker.linkFourPeaks(peaks);
-        return fitZZPeaks(peakList, abPeaks);
+        return fitZZPeaks(peakList, abPeaks, zzFitPars);
+    }
+
+    /**
+     * Fit peak measures (intensities or volumes) to ZZ function
+     *
+     * @param theFile The dataset to fit the peaks to
+     * @param peakGroups   A collection of peaks to fit simultaneously
+     * @return a List of alternating name/values with the parameters of the fit
+     * if updatePeaks is false. Otherwise return empty list
+     * @throws IllegalArgumentException
+     * @throws IOException
+     * @throws PeakFitException
+     */
+    public static List<PeakFitPars> fitZZPeakIntensities(PeakList peakList, Dataset theFile, List<Set<Peak>> peakGroups, ZZFitPars zzFitPars)
+            throws IllegalArgumentException, IOException, PeakFitException {
+        boolean missingMeasures = peakGroups.stream().flatMap(g -> g.stream().toList().stream()).anyMatch(peak -> !peak.getMeasures().isPresent());
+        if (missingMeasures) {
+            PeakListTools.quantifyPeaks(peakList, "center");
+        }
+        List<List<Peak>> groupedPeaks = new ArrayList<>();
+        for (var group : peakGroups) {
+            if (group.size() != 4) {
+                throw new IllegalArgumentException("ZZ fit requires 4 peaks but " + group.size() + " provided");
+            }
+            List<Peak> abPeaks = PeakLinker.linkFourPeaks(group);
+            groupedPeaks.add(abPeaks);
+        }
+        return fitZZPeakGroups(peakList, groupedPeaks, zzFitPars);
     }
 
     /**
@@ -1439,14 +1438,14 @@ public class PeakListTools {
      * @throws PeakFitException
      */
     public static List<Object> fitZZPeaks(PeakList peakList, Dataset theFile, Collection<Peak> peaks,
-                                               PeakFitParameters fitPars,
-                                               int[] rows,
-                                               double[] delays)
+                                          PeakFitParameters fitPars,
+                                          int[] rows,
+                                          double[] delays)
             throws IllegalArgumentException, IOException, PeakFitException {
         if (peaks.size() != 4) {
             throw new IllegalArgumentException("ZZ fit requires 4 peaks but " + peaks.size() + " provided");
         }
-        boolean missingMeasures = peaks.stream().anyMatch(peak -> !peak.getMeasures().isPresent());
+        boolean missingMeasures = peaks.stream().anyMatch(peak -> peak.getMeasures().isEmpty());
         if (missingMeasures) {
             PeakListTools.quantifyPeaks(peakList, "center");
         }
@@ -1455,7 +1454,8 @@ public class PeakListTools {
 
     }
 
-    public record XYEValues(double[][] xValues, double[][] yValues, double[][] errValues) {}
+    public record XYEValues(double[][] xValues, double[][] yValues, double[][] errValues) {
+    }
 
     public static XYEValues getXYErrValues(PeakList peakList, List<Peak> abPeaks) {
         var measureX = peakList.getMeasureValues();
@@ -1473,7 +1473,32 @@ public class PeakListTools {
         }
         return new XYEValues(xValues, yValues, errValues);
     }
-public static List<XYValue> calcRatioKK(XYEValues xyeValues) {
+
+    public static XYEValues getGroupedXYErrValues(PeakList peakList, List<List<Peak>> groupedPeaks) {
+        var measureX = peakList.getMeasureValues();
+        int nY = 4 * groupedPeaks.size();
+        double[][] xValues = new double[1][measureX.length];
+        double[][] yValues = new double[nY][measureX.length];
+        double[][] errValues = new double[nY][measureX.length];
+        System.arraycopy(measureX, 0, xValues[0], 0, xValues[0].length);
+        int j = 0;
+        for (var group : groupedPeaks) {
+            int iGroup = j;
+            for (int i = 0; i < 4; i++) {
+                var measureOpt = group.get(i).getMeasures();
+                int iSig = i;
+                measureOpt.ifPresent(measures -> {
+                    int k = iGroup * 4 + iSig;
+                    System.arraycopy(measures[0], 0, yValues[k], 0, yValues[k].length);
+                    System.arraycopy(measures[1], 0, errValues[k], 0, errValues[k].length);
+                });
+            }
+            j++;
+        }
+        return new XYEValues(xValues, yValues, errValues);
+    }
+
+    public static List<XYValue> calcRatioKK(XYEValues xyeValues) {
         double[][] xValues = xyeValues.xValues;
         double[][] yValues = xyeValues.yValues;
         List<XYValue> xyValues = new ArrayList<>();
@@ -1484,16 +1509,52 @@ public static List<XYValue> calcRatioKK(XYEValues xyeValues) {
             double bb = yValues[1][i];
             double ab = yValues[2][i];
             double ba = yValues[3][i];
-            double ratio  = (ab * ba) / (aa * bb - ab * ba);
+            double ratio = (ab * ba) / (aa * bb - ab * ba);
             XYValue xyValue = new XYValue(delay, ratio);
             xyValues.add(xyValue);
         }
         return xyValues;
     }
-    public static List<PeakFitPars> fitZZPeaks(PeakList peakList, List<Peak> abPeaks) {
+
+    public static List<PeakFitPars> fitZZPeakGroups(PeakList peakList, List<List<Peak>> abPeaks, ZZFitPars zzFitPars) {
+        XYEValues xyeValues = getGroupedXYErrValues(peakList, abPeaks);
+        ZZFit2 zzFit = new ZZFit2(zzFitPars);
+        int nGroups = xyeValues.yValues.length / 4;
+        zzFit.setXYE(xyeValues.xValues, xyeValues.yValues, xyeValues.errValues);
+        PointValuePair result = zzFit.fit();
+        if (result == null) {
+            GUIUtils.warn("Fitting", "Error fitting data");
+            return Collections.emptyList();
+        }
+        double[] pars = zzFit.getPars();
+        double[] errs = zzFit.getParErrs();
+        String[] parNames = zzFit.parNames();
+
+        int nCommon = zzFit.nCommonPar();
+        int nPerGroup = zzFit.nSigPar();
+        int nTotal = pars.length;
+
+        List<PeakFitPars> peakFitParResult = new ArrayList<>();
+        for (int iGroup = 0; iGroup < nGroups; iGroup++) {
+            Map<String, FitPar> fitPars = new HashMap<>();
+            for (int i = 0; i < nPerGroup; i++) {
+                FitPar fitPar = new FitPar(parNames[i], pars[iGroup * nPerGroup + i], errs[iGroup * nPerGroup + i]);
+                fitPars.put(fitPar.name(), fitPar);
+            }
+            for (int iCommon = 0; iCommon < nCommon; iCommon++) {
+                FitPar fitPar = new FitPar(parNames[nPerGroup + iCommon], pars[nTotal - nCommon + iCommon], errs[nTotal - nCommon + iCommon]);
+                fitPars.put(fitPar.name(), fitPar);
+            }
+            PeakFitPars peakFitPars = new PeakFitPars(abPeaks.get(iGroup).getFirst(), fitPars);
+            peakFitParResult.add(peakFitPars);
+        }
+        return peakFitParResult;
+    }
+
+    public static List<PeakFitPars> fitZZPeaks(PeakList peakList, List<Peak> abPeaks, ZZFitPars zzFitPars) {
         XYEValues xyeValues = getXYErrValues(peakList, abPeaks);
         int mode = 2;
-        FitEquation zzFit = mode == 2 ? new ZZFit2() : new ZZFit();
+        FitEquation zzFit = mode == 2 ? new ZZFit2(zzFitPars) : new ZZFit();
 
         zzFit.setXYE(xyeValues.xValues, xyeValues.yValues, xyeValues.errValues);
         PointValuePair result = zzFit.fit();
@@ -1506,25 +1567,11 @@ public static List<XYValue> calcRatioKK(XYEValues xyeValues) {
         String[] parNames = zzFit.parNames();
 
         Map<String, FitPar> fitPars = new HashMap<>();
-        for (int i=0;i<pars.length;i++) {
+        for (int i = 0; i < pars.length; i++) {
             FitPar fitPar = new FitPar(parNames[i], pars[i], errs[i]);
             fitPars.put(fitPar.name(), fitPar);
         }
         PeakFitPars peakFitPars = new PeakFitPars(abPeaks.get(0), fitPars);
-        String[] peakLabels = {"AA", "BB", "AB", "BA"};
-        for (int jPeak = 0; jPeak < 4; jPeak++) {
-            String label = peakLabels[jPeak];
-            Peak peak = abPeaks.get(jPeak);
-            if (jPeak == 0) {
-                if (mode == 2) {
-                    peak.setComment(String.format("%s I %.3f R1A %.3f R1B %.3f KeXAB %.3f KeXBA %.3f pA %.2f", label, pars[0], pars[1], pars[2], pars[3], pars[4], pars[5]));
-                } else {
-                    peak.setComment(String.format("%s I %.3f R1 %.3f KeX %.3f pA %.2f", label, pars[0], pars[1], pars[2], pars[3]));
-                }
-            } else {
-                peak.setComment(label);
-            }
-        }
         return Collections.singletonList(peakFitPars);
     }
 
@@ -1620,8 +1667,8 @@ public static List<XYValue> calcRatioKK(XYEValues xyeValues) {
             }
             for (int dDim = 0, iRow = 0; dDim < dataDim; dDim++) {
                 boolean gotThisDim = false;
-                for (int pDim = 0; pDim < pdim.length; pDim++) {
-                    if (pdim[pDim] == dDim) {
+                for (int i : pdim) {
+                    if (i == dDim) {
                         gotThisDim = true;
                         break;
                     }
@@ -1636,7 +1683,7 @@ public static List<XYValue> calcRatioKK(XYEValues xyeValues) {
 
             peak.getPeakRegion(theFile, pdim, p1, cpt[iPeak], width[iPeak], meanDimWidth, 1.0);
 
-            double intensity = (double) peak.getIntensity();
+            double intensity = peak.getIntensity();
             GuessValue gValue;
             if (intensity > 0.0) {
                 gValue = new GuessValue(intensity, intensity * 0.1, intensity * 3.5, !zzMode, INTENSITY);
@@ -1745,7 +1792,7 @@ public static List<XYValue> calcRatioKK(XYEValues xyeValues) {
         }
 
         for (int j = 0; j < nPeakDim; j++) {
-            Float shapeFactor = peaks.get(0).peakDims[j].getShapeFactor();
+            Float shapeFactor = peaks.getFirst().peakDims[j].getShapeFactor();
             double lower = 0.0;
             double upper = 1.5;
             if (fitPars.shapeParameters().constrainShape()) {
@@ -1766,9 +1813,9 @@ public static List<XYValue> calcRatioKK(XYEValues xyeValues) {
             guessList.add(gValue);
         }
         if (zzMode) {
-            guessList.add(0, new GuessValue(globalMax * 1.5, globalMax / 2.0, 4.0 * globalMax, zzMode, GLOBAL_INTENSITY));
+            guessList.addFirst(new GuessValue(globalMax * 1.5, globalMax / 2.0, 4.0 * globalMax, zzMode, GLOBAL_INTENSITY));
         } else {
-            guessList.add(0, new GuessValue(0.0, -0.5 * globalMax, 0.5 * globalMax, zzMode, GLOBAL_INTENSITY));
+            guessList.addFirst(new GuessValue(0.0, -0.5 * globalMax, 0.5 * globalMax, zzMode, GLOBAL_INTENSITY));
         }
         if (zzMode) {
             double r1Guess = 2.0 / maxDelay;
@@ -1897,7 +1944,7 @@ public static List<XYValue> calcRatioKK(XYEValues xyeValues) {
                 peak.setIntensity((float) values[index++]);
                 if ((delays != null) && (delays.length > 0)) {
                     if (zzMode) {
-                        peak.setComment(getZZResult( fitPars.fitZRAB(),  fitPars.fitZKAB(),  values,  jPeak));
+                        peak.setComment(getZZResult(fitPars.fitZRAB(), fitPars.fitZKAB(), values, jPeak));
                     } else {
                         if (fitC) {
                             peak.setComment(String.format("R1 %.4f %.3f", values[index++], values[index++]));
@@ -1935,7 +1982,7 @@ public static List<XYValue> calcRatioKK(XYEValues xyeValues) {
                     double err;
                     if ((noise != null) && (measures != null)) {
                         if (nPeakDim == 2) {
-                            nPoints = (int) (((double) nPoints / 4.0) * Math.PI);  // area of an ellipse
+                            nPoints = (int) ((nPoints / 4.0) * Math.PI);  // area of an ellipse
                         }
                         err = nPoints < 2 ? noise.floatValue() : Math.sqrt(nPoints) * noise.floatValue();
                         for (int iPlane = 0; iPlane < nPlanes; iPlane++) {
@@ -1989,7 +2036,7 @@ public static List<XYValue> calcRatioKK(XYEValues xyeValues) {
         return peaksResult;
     }
 
-    static String getZZResult( boolean fitKAB, boolean fitR1AB, double[] a, int jPeak) {
+    static String getZZResult(boolean fitKAB, boolean fitR1AB, double[] a, int jPeak) {
         double amplitude;
         int nZZ = 2;
         int iPar = 0;
@@ -2099,13 +2146,13 @@ public static List<XYValue> calcRatioKK(XYEValues xyeValues) {
                 List<PeakDim> peakDims = peakList.getLinkedPeakDims(peak, iDim);
                 Set<Peak> firstLayer = new HashSet<>();
                 for (PeakDim peakDim : peakDims) {
-                    used.add((Peak) peakDim.getPeak());
-                    firstLayer.add((Peak) peakDim.getPeak());
+                    used.add(peakDim.getPeak());
+                    firstLayer.add(peakDim.getPeak());
                 }
                 List<Set<Peak>> column = new ArrayList<>();
                 column.add(firstLayer);
-                column.add(Collections.EMPTY_SET);
-                column.add(Collections.EMPTY_SET);
+                column.add(Collections.emptySet());
+                column.add(Collections.emptySet());
                 result.add(column);
             }
 
@@ -2327,9 +2374,9 @@ public static List<XYValue> calcRatioKK(XYEValues xyeValues) {
             sBuf.append(" ");
             sBuf.append(delta);
 
-            for (int j = 0; j < deltas.length; j++) {
+            for (double v : deltas) {
                 sBuf.append(" ");
-                sBuf.append(deltas[j]);
+                sBuf.append(v);
             }
 
             return sBuf.toString();
